# ens-pbi

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml
docs/: azure-setup.md  partner-briefing.md  setup-guide.md  skills-audit.md
projects/EnSFinance.Report/: definition.pbir
projects/EnSFinance.Report/definition/: report.json
projects/EnSFinance.Report/definition/pages/: pages.json
projects/EnSFinance.Report/definition/pages/pgBillsVendors/: page.json
projects/EnSFinance.Report/definition/pages/pgCurrencyFX/: page.json
projects/EnSFinance.Report/definition/pages/pgOverview/: page.json
projects/EnSFinance.Report/definition/pages/pgPayments/: page.json
projects/EnSFinance.SemanticModel/: definition.pbism
projects/EnSFinance.SemanticModel/definition/: database.tmdl  model.tmdl  relationships.tmdl
projects/EnSFinance.SemanticModel/definition/tables/: Bill.tmdl  Client.tmdl  Currency.tmdl  Date.tmdl  Exchange Rate.tmdl  Expense Category.tmdl  Invoice.tmdl  Payment Method.tmdl  Payment.tmdl  Transaction Status.tmdl  User.tmdl  Vendor.tmdl
scripts/: deploy.py  deploy_api.py
skills/power-bi-agentic-development/: .gitignore  README.md
skills/power-bi-agentic-development/.claude-plugin/: marketplace.json  plugin.json
skills/power-bi-agentic-development/release-notes/previous-releases/: 0.2.0.md  0.3.0.md  0.4.0.md  0.4.1.md  0.5.0.md  0.6.0.md  0.7.0.md  0.7.1.md  0.7.2.md  0.7.3.md  0.8.0.md  v0.8.1.md  v0.8.2.md  v0.8.3.md  v0.8.4.md  v0.8.6.md  v0.8.7.md  v0.8.8.md  v0.8.9.md
(+47 files in other folders)
